--- a/x_fact_claim_evidence.ipynb
+++ b/x_fact_claim_evidence.ipynb
@@ -7619,13 +7619,13 @@
       "source": [
         "## **Fine-Tuning XLM-RoBERTa**\n",
         "\n",
-        "The final baseline uses a **transformer-based model**, `xlm-roberta-base`, fine-tuned on the FEVER dataset.\n",
+        "The final baseline uses a **transformer-based model**, `xlm-roberta-base`, fine-tuned on the X-fact dataset.\n",
         "\n",
         "1. **HuggingFace Dataset Conversion**\n",
         "\n",
         "   * The cleaned pandas DataFrames are converted into HuggingFace `Dataset` objects with the following fields:\n",
         "\n",
-        "     * `text` – the claim,\n",
+        "     * `text` – the claim + 5 evidences,\n",
         "     * `labels` – the encoded veracity label.\n",
         "\n",
         "2. **Tokenization**\n",
